--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
-{
+r{
   "name": "corezoid-cron-next",
   "version": "1.0.0",
-  "main": "cron-next.js",
+  "main": "usercode.js",
   "dependencies": {
     "cron-parser": "^4.6.2"
   }
